ajustes de texto e cores

--- a/index.html
+++ b/index.html
@@ -24,7 +24,60 @@
 
     <section class="background">
       <img src="img/capa.jpg" alt="Estação das Docas" />
+      <legend>Estação das Docas</legend>
     </section>
+
+    <main class="text">
+      <article>
+        Certas coisas não falham na capital paraense. Fazem parte da rotina o
+        calor sem trégua, a chuva ao fim da tarde, o vaivém dos barcos na Baía
+        do Guajará, as ruas sombreadas pelas mangueiras e a beleza de
+        construções erguidas entre os séculos 17 e 19. Concentradas no Centro,
+        as edificações históricas são fruto da conquista da foz do Rio Amazonas
+        e, posteriormente, da bonança ocasionada pelo Ciclo da Borracha. Porém,
+        tradições à parte, uma nova Belém se faz sentir.
+      </article>
+      <!-- <div class="cards-text">
+        <div class="card-text">
+          <h3>Pontos turísticos pra se visitar em um dia:</h3>
+          <ul>
+            <li>Mercado do Ver-o-Peso</li>
+            <li>Sorveteria Cairu</li>
+          </ul>
+        </div>
+        <div class="card-text">
+          <h3>Quando ir?</h3>
+          <p>
+            Entre dezembro e maio, as chuvas costumam ser intensas. Quem visita a
+            cidade em outubro, mês do Círio de Nazaré, deve fazer reserva com
+            antecedência para garantir hospedagem – Belém recebe mais de 2 milhões
+            de turistas durante o evento religioso.
+          </p>
+        </div>
+        <div class="card-text">
+          <h3>Como chegar?</h3>
+          <p>
+            O Aeroporto Internacional Val-de-Cans recebe voos de todas as regiões
+            do Brasil. A rodoviária fica no bairro São Brás.
+          </p>
+        </div>
+        <div class="card-text">
+          <h3>O que comer?</h3>
+          <ol>
+            <li>
+              Açaí - O Pará é o maior produtor nacional de açaí.
+              <a href="https://www.instagram.com/pointdoacaibelem/?hl=pt">Point do Açaí</a></li>
+            <li>
+              Tacacá - É tradição vir a Belém e tomar tacacá. Sempre quente, esse
+              caldo inspirado na cultura indígena é servido por tacacazeiras em
+              uma cuia, e tem como principais ingredientes goma de mandioca,
+              camarão seco, tucupi, jambu – erva que causa uma leve sensação de
+              dormência na boca – e pimenta-de-cheiro.
+              <a href="https://www.instagram.com/tacacadorenatooficial/">Tacacá do Renato</a></li>
+          </ol>
+        </div>  
+      </div> -->
+    </main>
 
     <div class="title-conteiner">
       <h2>Curiosidades da cidade</h2>
@@ -45,7 +98,11 @@
       </div>
 
       <div class="card">
-        <img class="card-img" src="img/cirio-de-nazare.jpg" alt="Círio de Nazaré" />
+        <img
+          class="card-img"
+          src="img/cirio-de-nazare.jpg"
+          alt="Círio de Nazaré"
+        />
         <h4 class="title-card">A maior procissão católica do mundo</h4>
         <p class="description">
           Celebrado todo segundo domingo de outubro, o Círio de Nazaré é um dos
@@ -60,7 +117,11 @@
       </div>
 
       <div class="card">
-        <img class="card-img" src="img/cabanagem.jpg" alt="Monumento Cabanagem" />
+        <img
+          class="card-img"
+          src="img/cabanagem.jpg"
+          alt="Monumento Cabanagem"
+        />
         <h4 class="title-card">Cabanagem</h4>
         <p class="description">
           Belém foi palco de uma das maiores revoluções populares do país: a
@@ -73,19 +134,28 @@
     </section>
 
     <section class="video">
-        <h5>
-          Assista abaixo ao vídeo da dança mais popular do estado do Pará, o carimbó.
-        </h5>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/CkFpmCP-R04" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </section>
+      <h5>
+        Assista abaixo ao vídeo da dança mais popular do estado do Pará, o
+        carimbó.
+      </h5>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/CkFpmCP-R04"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </section>
 
-      <footer>
-          <a href="https://www.linkedin.com/in/jonatanrocha25/" target="_blank">
-              <img src="img/linkedin.svg" alt="Linkedin">
-          </a>
-          <a href="https://github.com/JonatanRocha2" target="_blank">
-              <img src="img/GitHub_(6).png" alt="GitHub">
-          </a>
-      </footer>
+    <footer>
+      <a href="https://www.linkedin.com/in/jonatanrocha25/" target="_blank">
+        <img src="img/linkedin.svg" alt="Linkedin" />
+      </a>
+      <a href="https://github.com/JonatanRocha2" target="_blank">
+        <img src="img/GitHub_(6).png" alt="GitHub" />
+      </a>
+    </footer>
   </body>
 </html>
