--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Belém, Pará, Brasil</title>
   </head>
   <body>
-    <header class="cabecalho">
+    <header id="home" class="cabecalho">
       <div class="logo">
         <img src="img/brasao-belem.jpg" alt="" />
       </div>
@@ -16,9 +16,9 @@
       <h1>Belém, cidade das mangueiras</h1>
 
       <nav class="menu">
-        <a href="">Home</a>
-        <a href="">Curiosidades</a>
-        <a href="">Vídeo</a>
+        <a href="#home">Home</a>
+        <a href="#curiosidades">Curiosidades</a>
+        <a href="#videos">Vídeo</a>
       </nav>
     </header>
 
@@ -37,49 +37,9 @@
         e, posteriormente, da bonança ocasionada pelo Ciclo da Borracha. Porém,
         tradições à parte, uma nova Belém se faz sentir.
       </article>
-      <!-- <div class="cards-text">
-        <div class="card-text">
-          <h3>Pontos turísticos pra se visitar em um dia:</h3>
-          <ul>
-            <li>Mercado do Ver-o-Peso</li>
-            <li>Sorveteria Cairu</li>
-          </ul>
-        </div>
-        <div class="card-text">
-          <h3>Quando ir?</h3>
-          <p>
-            Entre dezembro e maio, as chuvas costumam ser intensas. Quem visita a
-            cidade em outubro, mês do Círio de Nazaré, deve fazer reserva com
-            antecedência para garantir hospedagem – Belém recebe mais de 2 milhões
-            de turistas durante o evento religioso.
-          </p>
-        </div>
-        <div class="card-text">
-          <h3>Como chegar?</h3>
-          <p>
-            O Aeroporto Internacional Val-de-Cans recebe voos de todas as regiões
-            do Brasil. A rodoviária fica no bairro São Brás.
-          </p>
-        </div>
-        <div class="card-text">
-          <h3>O que comer?</h3>
-          <ol>
-            <li>
-              Açaí - O Pará é o maior produtor nacional de açaí.
-              <a href="https://www.instagram.com/pointdoacaibelem/?hl=pt">Point do Açaí</a></li>
-            <li>
-              Tacacá - É tradição vir a Belém e tomar tacacá. Sempre quente, esse
-              caldo inspirado na cultura indígena é servido por tacacazeiras em
-              uma cuia, e tem como principais ingredientes goma de mandioca,
-              camarão seco, tucupi, jambu – erva que causa uma leve sensação de
-              dormência na boca – e pimenta-de-cheiro.
-              <a href="https://www.instagram.com/tacacadorenatooficial/">Tacacá do Renato</a></li>
-          </ol>
-        </div>  
-      </div> -->
     </main>
 
-    <div class="title-conteiner">
+    <div id="curiosidades" class="title-conteiner">
       <h2>Curiosidades da cidade</h2>
     </div>
 
@@ -133,7 +93,7 @@
       </div>
     </section>
 
-    <section class="video">
+    <section id="videos" class="video">
       <h5>
         Assista abaixo ao vídeo da dança mais popular do estado do Pará, o
         carimbó.
