ajuste responsividade e body

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
       </nav>
     </header>
 
-    <section class="background">
+    <!-- <main class="background">
       <img src="img/capa.jpg" alt="Estação das Docas" />
       <legend>Estação das Docas</legend>
-    </section>
+    </main> -->
 
     <main class="text">
       <article>
-        Certas coisas não falham na capital paraense. Fazem parte da rotina o
-        calor sem trégua, a chuva ao fim da tarde, o vaivém dos barcos na Baía
-        do Guajará, as ruas sombreadas pelas mangueiras e a beleza de
-        construções erguidas entre os séculos 17 e 19. Concentradas no Centro,
-        as edificações históricas são fruto da conquista da foz do Rio Amazonas
-        e, posteriormente, da bonança ocasionada pelo Ciclo da Borracha. Porém,
-        tradições à parte, uma nova Belém se faz sentir.
+        Certas coisas não falham na capital paraense. Fazem parte da rotina
+        <span>o calor sem trégua, a chuva ao fim da tarde</span>, o vaivém dos
+        barcos na Baía do Guajará, as ruas sombreadas pelas mangueiras e a
+        beleza de construções erguidas entre os séculos 17 e 19. Concentradas no
+        Centro, as edificações históricas são fruto da conquista da foz do Rio
+        Amazonas e, posteriormente, da bonança ocasionada pelo Ciclo da
+        Borracha. Porém, tradições à parte, uma nova Belém se faz sentir.
       </article>
     </main>
 
